
  - Removed `Compound` class.

* docutils/transforms/references.py

  - Make `AnonymousHyperlinks` transform idempotent.

* docutils/transforms/universal.py

  - `Messages` also handles "loose" system messages generated by the parser.

* docutils/utils/__init__.py

  - Removed `Reporter.set_conditions()`.
    Set attributes via configuration settings or directly.

* docutils/utils/error_reporting.py

  - Removed. Obsolete in Python 3.

* docutils/writers/docutils-xml.py

  - Do not increase indentation of follow-up lines inside inline elements.
    when formatting with `indents`_.

* docutils/writers/_html_base.py

  - Make MathML the default math_output_.

* docutils/writers/html4css1/__init__.py

  - Keep default math_output_ value "HTML math.css".

* docutils/writers/latex2e/__init__.py

  - Remove optional argument `pxunit` of `LaTeXTranslator.to_latex_length()`
    (ignored since at least 2012).
  - Don't wrap references with custom reference-label_ in
    a ``\hyperref`` command.

  .. _reference-label: docs/user/config.html#reference-label

* docutils/writers/manpage.py

  - Remove code for unused emdash bullets.
  - Feature-request #105 more informative document comments.
    docutils version in header
  - Stop converting text to full capitals (bug #481).
  - Add module function insert_URI_breakpoints.
  - Add command line option ``--use-reference-macros`` to enable usage of man
    macros .UR/.UE.

* docutils/writers/null.py

  - `null.Writer.translate()` sets `self.output` to the empty string.

* tools/rst2odt_prepstyles.py

  - Use `core.publish_file()` instead of `core.publish_file_to_binary()`.

* tools/rst2odt_prepstyles.py

  - Removed. Use `docutils.writers.odf_odt.prepstyles`.


Release 0.21.2 (2024-04-23)
===========================

* Declare support for languages Georgian and Catalan (Valencian).

* docs/ref/docutils.dtd

  - Remove declaration of element <info>.
  - Remove <decoration> from content declaration of <section> elements.
